# TernarySearchTree

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  MakefileGeneral  NodeOfTernarySearchTree.h  README.md  TernarySearchTree.pro  appveyor.xml  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  program.cpp  ternarysearchtree.cpp  ternarysearchtree.h
